--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
   }
   body {
     font-family: "Open Sans", sans-serif;
-    background: black;
     color: wheat;
   }
   ul {
@@ -67,6 +66,7 @@ header .container {
     min-height: 97px;
 }
 
+
 header .container::before {
     content: "";
     position: absolute;
@@ -85,6 +85,12 @@ header nav {
 }
 header ul {
     display: flex;
+}
+
+@media (max-width: 767px) {
+  header ul {
+    display: none;
+ }
 }
 
 header ul a  {
@@ -122,23 +128,39 @@ header .form i {
     cursor: pointer;
 }
 
-.toggle {
+header .toggle {
     font-size: 25px;
     color: var(--main-color);
     display: none;
 }
 
 @media (max-width: 767px) {
-    .toggle {
+
+ .toggle:hover + ul {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.5);
+ }
+
+  header .toggle {
         display: block;
-     }
-    header ul {
-         display: none;
-    }
-    header .form {
+        cursor: pointer;   
+  }
+   
+
+  header ul a {
+      padding: 20px;
+  }
+  header .form {
         margin-left: 20px;
-    }
+  }
 }
+
 
   /* End Header */
 
@@ -148,6 +170,7 @@ header .form i {
     min-height: 100vh;
     position: relative;
     background: url("../images/landing.jpg");
+    background-repeat: no-repeat;
     display: flex;
     align-items: center;
 }
@@ -159,13 +182,23 @@ header .form i {
 }
 
 .landing .text {
-    z-index: 2;
+    z-index: 1;
     background: var(--transparent-color);
     width: 50%;
     padding: 50px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
+@media (max-width: 767px) {
+  .landing .text {
+    width: 100%;
+    margin-top: 50px;
+    justify-content: center;
+  }
+  .landing .text .content {
+    width: 100%;
+  }
 }
 
 .landing .text .content {
@@ -184,4 +217,236 @@ header .form i {
     line-height: 2;
 }
 
+.landing .fa-angle-left,
+.landing .fa-angle-right {
+  color: var(--main-color);
+  display: block;
+  position: absolute;
+  top: 50%;
+  color: aqua;
+  transform: translateX(-50%);
+  cursor: pointer;
+  z-index: 3;
+}
+@media (max-width: 767px) {
+  .landing .fa-angle-left,
+  .landing .fa-angle-right {
+    display: none;
+  }
+}
+.fa-angle-left {
+  left: 30px;
+}
+
+.fa-angle-right {
+  right: 30px;
+}
+.dots {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 4;
+  margin-bottom: 25px;
+  width: 100px;
+}
+
+.dots span {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px white solid;
+}
+
+.dots span.active {
+  background: var(--main-color);
+  border-color: var(--main-color);
+}
 /* End Landing */
+
+/* Start Services */
+.services {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.special {
+  text-align: center;
+  color: black;
+  font-family: "Open Sans";
+}
+
+.special h2 {
+  font-size: 40px;
+  font-weight: normal;
+  position: relative;
+  margin-bottom: 70px;
+  text-transform: uppercase;
+}
+
+.special h2::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 2px;
+  bottom: -30px;
+  background: #222;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.special h2::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  bottom: -37.5px;
+  background: #222;
+  left: 50%;
+  border-radius: 50%;
+  border: 2px solid #222;
+  transform: translateX(-50%);
+  background: white;
+}
+
+.special p {
+  font-size: 14px;
+  color: #777;
+  width: 550px;
+  max-width: 100%;
+  text-align: center;
+  margin: 0 auto 100px;
+  line-height: 1.8;
+}
+
+@media (min-width:767px) {
+  .srv-cont {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px,1fr));
+    gap: 30px;
+  }
+  
+}
+
+.srv {
+  display: flex; 
+}
+.srv .text {
+  padding: 0;
+}
+
+.srv .text h3 {
+  margin-bottom: 30px;
+  color: var(--main-color);
+}
+
+.srv .text p {
+  line-height: 1.8;
+  color: #777;
+}
+
+.srv i {
+  margin-right: 40px;
+  font-size: 40px;
+  color: #222;
+}
+
+@media (max-width: 767px) {
+  
+  .srv {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+  .srv i {
+    justify-self: center;
+    margin: 0 0 30px 0;
+  }
+  .srv .text {
+    text-align: center;
+  }
+
+}
+/* End Services */
+
+/* Start Design */
+
+.design {
+  background: url(../images/design-features.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row-reverse; 
+  padding: var(--section-padding) 0;
+  position: relative;
+  height: 600px;
+  overflow: hidden;
+}
+
+.design .photo, .design .text {
+  position: relative;
+  z-index: 1;
+  flex: 1;
+}
+
+.design .text {
+  display: flex;
+  justify-content: flex-start;
+  padding: 50px;
+  background: var(--transparent-color);
+  width: 50%;
+  z-index: 1;
+  align-self: center;
+  color: aliceblue;
+}
+
+.design .text .content {
+  max-width: 500px;
+}
+.design .text ul li {
+  padding: 15px 0;
+}
+.design .text .content h2 {
+  margin-bottom: 40px;
+}
+
+.design::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 60%);
+  z-index: 1;
+}
+
+.design .photo {
+  z-index: 1;
+  bottom: -150px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+@media (max-width: 767px) {
+  .design .photo {
+    display: none;
+  }
+  .design .text {
+    max-width: 100%;
+  }
+}
+/* End Design */
+/* Start portfolio */
+
+
+.portfolio {
+  padding: var(--section-padding) 0;
+}
+
+/* End portfolio */
