--- a/css/style.css
+++ b/css/style.css
@@ -441,12 +441,97 @@ header .toggle {
     max-width: 100%;
   }
 }
+.design .text ul li::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f108";
+  font-weight: 900;
+  margin-right: 20px;
+  position: relative;
+  top: 1px;
+}
 /* End Design */
 /* Start portfolio */
-
-
 .portfolio {
   padding: var(--section-padding) 0;
 }
 
+.shuffle {
+  display: flex;
+  justify-content: center;
+}
+
+.shuffle ul {
+  display: flex;
+  color: #222;
+}
+
+.shuffle ul li {
+  padding: 15px;
+  cursor: pointer;
+}
+
+.shuffle ul li:hover, .active_li {
+  background: var(--main-color);
+}
+
+@media (min-width: 767px) {
+  .img-cont {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  
+  }
+}
+
+.img-cont .box img {
+  max-width: 100%;
+  transition: 0.3s;
+}
+
+.img-cont .box {
+  overflow: hidden;
+  position: relative;
+}
+
+.img-cont .box .caption {
+  position: absolute;
+  left: 0;
+  bottom: -80px;
+  transition: 0.3s;
+  background: white;
+  width: 100%;
+  padding: 15px 30px;
+  color: #333;
+}
+
+.img-cont .box .caption h4 {
+  margin-bottom: 10px;
+  font-weight: normal;
+}
+
+.img-cont .box .caption p {
+  color: var(--main-color);
+}
+.img-cont .box:hover  .caption {
+  bottom: 0;
+}
+
+.img-cont .box:hover  img {
+  transform: rotate(-10deg) scale(1.3);
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  padding: 15px 20px;
+}
+
+.btn a {
+  padding: 20px 25px;
+  background: var(--main-color);
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  margin: 30px auto;
+  width: fit-content;
+}
 /* End portfolio */
