--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   }
   body {
     font-family: "Open Sans", sans-serif;
-    color: wheat;
+    color: rgb(255, 255, 255);
   }
   ul {
     list-style: none;
@@ -455,7 +455,7 @@ header .toggle {
   padding: var(--section-padding) 0;
 }
 
-<<<<<<< HEAD
+
 .shuffle {
   display: flex;
   justify-content: center;
@@ -536,6 +536,137 @@ header .toggle {
   width: fit-content;
 }
 /* End portfolio */
-=======
-/* End portfolio */
->>>>>>> 907baa65eb3ee9f5dc1e1aff8e001f25b4a9357a
+/* Start Video */
+
+.video {
+  position: relative;
+}
+
+.video::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgb(0 0 0 / 60%);
+}
+
+
+.video video {
+  max-width: 100%;
+}
+
+.video .content {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  background: var(--transparent-color);
+  text-align: center;
+  padding: 60px 0;
+  color: white;
+}
+
+.video .content h3 {
+  font-weight: normal;
+  padding: 10px 0;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.video .content p  {
+  line-height: 2;
+  margin-bottom: 20px;
+}
+
+.video .content button {
+  padding: 10px 20px;
+  background: black;
+  color: white;
+  border: none;
+  text-transform: uppercase;
+}
+/* End Video */
+/* Start ABOUT US */
+
+.about {
+  padding: var(--section-padding) 0 0 0;
+}
+
+.about .container{
+  overflow: hidden;
+  position: relative;
+}
+.about .img {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 290px;
+
+}
+
+.about img {
+  position: absolute;
+  bottom: -120px;
+}
+/* End ABOUT US */
+/* Start Stats */
+
+.stats {
+    padding: var(--section-padding) 0;
+    background: url(../images/stats.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    
+  }
+
+  .stats::before {
+    content: "";
+    background: rgb(0 0 0 / 75%);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+  }
+
+.stats .container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 25%;
+  justify-content: center;
+  position: relative;
+}
+
+.stats .box {
+  background: var(--transparent-color);
+  padding: 40px 60px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.stats .box i {
+  background: #222;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  padding: 20px;
+}
+
+.stats .box h2 {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0px 0px 20px;
+}
+
+.stats .box p {
+  line-height: 2;
+}
+
+/* End Stats */
